PEH-440 PEH-739 PEH-740 PEH-743 PEH-745 PEH-437 PEH-749

--- a/force-app/main/default/classes/AccountSettingsController.cls
+++ b/force-app/main/default/classes/AccountSettingsController.cls
@@ -89,6 +89,19 @@ public without sharing class AccountSettingsController {
     }
 
     @AuraEnabled
+    public static Boolean changeOptInVisitResults() {
+        try {
+            Contact currentContact = getCurrentContact();
+            currentContact.Visit_Results_Opt_In__c = !currentContact.Visit_Results_Opt_In__c;
+            update currentContact;
+            return currentContact.Visit_Results_Opt_In__c;
+        } catch (Exception e) {
+            AuraHelper.throwException(e);
+        }
+        return null;
+    }
+
+    @AuraEnabled
     public static void changeOptInEmail(Boolean participantOptInStatusEmail, Boolean hcpOptInPatientEmail, Boolean hcpOptInStudyEmail, Boolean hcpOptInRefStatusEmail) {
         try {
             Contact currentContact = getCurrentContact();
@@ -157,7 +170,8 @@ public without sharing class AccountSettingsController {
                         HCP_Opt_In_Referral_Status_Emails__c,
                         Delegate_Opt_In_Status_Emails__c,
                         RRCookiesAllowedCookie__c,
-                        RRLanguageAllowedCookie__c
+                        RRLanguageAllowedCookie__c,
+                        Visit_Results_Opt_In__c
                 FROM Contact
                 WHERE Id IN (
                         SELECT ContactId
