--- a/force-app/main/default/classes/DatabaseProxy.cls
+++ b/force-app/main/default/classes/DatabaseProxy.cls
@@ -12,6 +12,22 @@ public inherited sharing class DatabaseProxy {
         }
     }
 
+    public void updateRecord(SObject record, Boolean withoutSharing) {
+        if(withoutSharing) {
+            ((DatabaseProxyWithoutSharing) ClassFactory.newInstance(DatabaseProxyWithoutSharing.class)).updateRecord(record);
+        } else {
+            update record;
+        }
+    }
+
+    public void updateRecords(List<SObject> records, Boolean withoutSharing) {
+        if(withoutSharing) {
+            ((DatabaseProxyWithoutSharing) ClassFactory.newInstance(DatabaseProxyWithoutSharing.class)).updateRecords(records);
+        } else {
+            update records;
+        }
+    }
+
     public void upsertRecord(SObject record) {
         upsert record;
     }
@@ -24,6 +40,14 @@ public inherited sharing class DatabaseProxy {
 
         public List<SObject> query(String query) {
             return Database.query(query);
+        }
+
+        public void updateRecord(SObject record) {
+            update record;
+        }
+
+        public void updateRecords(List<SObject> records) {
+            update records;
         }
     }
 }
