--- a/force-app/main/default/classes/VisitResultSharingPanelRemote.cls
+++ b/force-app/main/default/classes/VisitResultSharingPanelRemote.cls
@@ -1,3 +1,4 @@
+
 /**
  * Created by Leonid Bartenev
  * Edited by Igor Malyuta
@@ -36,6 +37,7 @@ public without sharing class VisitResultSharingPanelRemote {
         @AuraEnabled public String ssSelectionType;
         @AuraEnabled public Integer showAfterDays;
         @AuraEnabled public String whenToShow;
+        @AuraEnabled public Boolean inPatientPortal;
     }
 
     public class InitData {
@@ -119,6 +121,9 @@ public without sharing class VisitResultSharingPanelRemote {
             initData.options.ssSelectionType = studySites.size() == withSharingSiteIds.size() ? TYPE_ALL : 'Study Sites';
             initData.options.showAfterDays = (Integer) ctp.Shareback_Availability_Timing__c;
             initData.options.whenToShow = ctp.Shareback_Availability_Timing__c > 0 ? 'After' : 'Immediate';
+            initData.options.inPatientPortal =
+                    (ctp.Participating_in_Patient_Portal__c != null && ctp.Participating_in_Patient_Portal__c == 'Yes')
+                            ? true : false;
 
             return initData;
         } catch (Exception e) {
