fix null contactId

--- a/force-app/main/default/classes/VisitResultsRemote.cls
+++ b/force-app/main/default/classes/VisitResultsRemote.cls
@@ -9,19 +9,18 @@ public inherited sharing class VisitResultsRemote {
         try {
             InitDataWrapper wrapper = new InitDataWrapper();
             VisitResultsService service = ((VisitResultsService) ClassFactory.newInstance(VisitResultsService.class));
-            wrapper.visitResultsGroupNames = service.getVisitResultsGroupNames(visitResultsMode);
+            ParticipantService.ParticipantState state = ((ParticipantService) ClassFactory.newInstance(ParticipantService.class)).getState();            wrapper.visitResultsGroupNames = service.getVisitResultsGroupNames(visitResultsMode);
             List<Patient_Visit__c> visits = service.getPatientVisits();
-            if (visits != null
-                    && !visits.isEmpty()
-                    && visits[0].Participant_Study_Enrollment__c != null
-                    && visits[0].Participant_Study_Enrollment__r.Participant__c != null
-                    && visits[0].Participant_Study_Enrollment__r.Participant__r.Contact__c != null) {
-
-                wrapper.contact = visits[0].Participant_Study_Enrollment__r.Participant__r.Contact__r;
+            if (state.participant != null && state.participant.Contact__c != null) {
+                wrapper.contact = state.participant.Contact__r;
+            }
+            if(visits != null & !visits.isEmpty()) {
                 List<Visit_Result__c> visitResults = service.getVisitResults(visits[0].Id, null);
                 if (visitResults != null) {
                     wrapper.isDataMissed = visitResults.isEmpty();
                 }
+            } else {
+                wrapper.isDataMissed = true;
             }
             return wrapper;
         } catch (Exception e) {
