--- a/force-app/main/default/classes/DatabaseProxy.cls
+++ b/force-app/main/default/classes/DatabaseProxy.cls
@@ -13,7 +13,7 @@ public inherited sharing class DatabaseProxy {
     }
 
     public void updateRecord(SObject record, Boolean withoutSharing) {
-        if(withoutSharing) {
+        if (withoutSharing) {
             ((DatabaseProxyWithoutSharing) ClassFactory.newInstance(DatabaseProxyWithoutSharing.class)).updateRecord(record);
         } else {
             update record;
@@ -21,33 +21,49 @@ public inherited sharing class DatabaseProxy {
     }
 
     public void updateRecords(List<SObject> records, Boolean withoutSharing) {
-        if(withoutSharing) {
+        if (withoutSharing) {
             ((DatabaseProxyWithoutSharing) ClassFactory.newInstance(DatabaseProxyWithoutSharing.class)).updateRecords(records);
         } else {
             update records;
         }
     }
 
-    public void upsertRecord(SObject record) {
-        upsert record;
+    public void upsertRecord(SObject record, Boolean withoutSharing) {
+        if (withoutSharing) {
+            ((DatabaseProxyWithoutSharing) ClassFactory.newInstance(DatabaseProxyWithoutSharing.class)).upsertRecord(record);
+        } else {
+            upsert record;
+        }
     }
 
-    public void upsertRecords(List<SObject> records) {
-        upsert records;
+    public void upsertRecords(List<SObject> records, Boolean withoutSharing) {
+        if (withoutSharing) {
+            ((DatabaseProxyWithoutSharing) ClassFactory.newInstance(DatabaseProxyWithoutSharing.class)).upsertRecords(records);
+        } else {
+            upsert records;
+        }
     }
 
-    public without sharing class DatabaseProxyWithoutSharing {
+    private without sharing class DatabaseProxyWithoutSharing {
 
-        public List<SObject> query(String query) {
+        private List<SObject> query(String query) {
             return Database.query(query);
         }
 
-        public void updateRecord(SObject record) {
+        private void updateRecord(SObject record) {
             update record;
         }
 
-        public void updateRecords(List<SObject> records) {
+        private void updateRecords(List<SObject> records) {
             update records;
+        }
+
+        private void upsertRecord(SObject record) {
+            upsert record;
+        }
+
+        private void upsertRecords(List<SObject> records) {
+            upsert records;
         }
     }
 }
