--- a/force-app/main/default/classes/Batch_PSECreateInvitation.cls
+++ b/force-app/main/default/classes/Batch_PSECreateInvitation.cls
@@ -21,14 +21,13 @@ public without sharing class Batch_PSECreateInvitation extends Batch_ScheduledAb
                 SELECT
                         Id,
                         Clinical_Trial_Profile__c,
-                        Days_After_Referred__c,
-                        Participant_Contact__c
-                FROM Participant_Enrollment__c
-                WHERE Participant_Status__c IN: SurveyService.getAvailableStatuses()
-                AND (Participant_Study_Enrollment__c = NULL
-                    OR Participant_Study_Enrollment__r.Status__c IN: SurveyService.getAvailableStatuses())
-                AND Days_After_Referred__c IN: daysSet
-                AND Participant_Contact__c IN (SELECT ContactId FROM User WHERE IsActive = TRUE)
+                        Days_After_Enrolled__c,
+                        Participant_Contact__c,
+                        Participant_Enrollment__c
+                FROM Participant_Study_Enrollment__c
+                WHERE Status__c IN: PSEService.PSE_STATUS_GROUP_ALL
+                    AND Days_After_Enrolled__c IN: daysSet
+                    AND Participant_Contact__c IN (SELECT ContactId FROM User WHERE IsActive = TRUE)
         ];
     }
 
@@ -47,7 +46,7 @@ public without sharing class Batch_PSECreateInvitation extends Batch_ScheduledAb
                 WHERE Clinical_Trial_Profile__c
                         IN (SELECT
                                 Clinical_Trial_Profile__c
-                        FROM Participant_Enrollment__c
+                        FROM Participant_Study_Enrollment__c
                         WHERE Id IN:enrollments)
                     AND Survey__r.ActiveVersionId != NULL
         ];
@@ -65,29 +64,17 @@ public without sharing class Batch_PSECreateInvitation extends Batch_ScheduledAb
             tsList.add(t);
         }
 
-        List<SurveyInvitation> surveyInvitation = [
-                SELECT
-                        Id,
-                        Participant_Enrollment__c,
-                        Trial_Survey__c
-                FROM SurveyInvitation
-                WHERE Participant_Enrollment__c IN:enrollments
-        ];
-
-        Map<String, SurveyInvitation> invitationMap = new Map<String, SurveyInvitation>();
-        for(SurveyInvitation inv : surveyInvitation) {
-            invitationMap.put('' + inv.Participant_Enrollment__c + inv.Trial_Survey__c, inv);
-        }
+        Map<String, SurveyInvitation> invitationMap = getInvitationMap((List<Participant_Study_Enrollment__c>) enrollments);
 
         List<SurveyInvitation> newInvitations = new List<SurveyInvitation>();
-        for(Participant_Enrollment__c pe : (List<Participant_Enrollment__c>) enrollments) {
-            List<Trial_Survey__c> surveys = ctpToTSMap.get(pe.Clinical_Trial_Profile__c);
+        for(Participant_Study_Enrollment__c pse : (List<Participant_Study_Enrollment__c>) enrollments) {
+            List<Trial_Survey__c> surveys = ctpToTSMap.get(pse.Clinical_Trial_Profile__c);
             if(surveys != null) {
-                for(Trial_Survey__c surv : surveys) {
-                    if(surv.Active_After_Days__c == pe.Days_After_Referred__c) {
-                        String key = '' + pe.Id + surv.Id;
+                for(Trial_Survey__c ts : surveys) {
+                    if(ts.Active_After_Days__c == pse.Days_After_Enrolled__c) {
+                        String key = '' + pse.Participant_Enrollment__c + ts.Id;
                         if(invitationMap.get(key) == null) {
-                            newInvitations.add(SurveyService.getInstance().generateInvitation(surv, pe.Id));
+                            newInvitations.add(SurveyService.getInstance().generateInvitation(ts, pse.Participant_Enrollment__c));
                         }
                     }
                 }
@@ -103,8 +90,27 @@ public without sharing class Batch_PSECreateInvitation extends Batch_ScheduledAb
         TaskService.getInstance().createSurveyTasks(invitationsVisible);
     }
 
+    private Map<String, SurveyInvitation> getInvitationMap(List<Participant_Study_Enrollment__c> enrollments) {
+        List<Id> peIds = new List<Id>();
+        for (Participant_Study_Enrollment__c pse : enrollments) peIds.add(pse.Participant_Enrollment__c);
+
+        List<SurveyInvitation> surveyInvitation = [
+                SELECT
+                        Id,
+                        Participant_Enrollment__c,
+                        Trial_Survey__c
+                FROM SurveyInvitation
+                WHERE Participant_Enrollment__c IN:peIds
+        ];
+
+        Map<String, SurveyInvitation> invitationMap = new Map<String, SurveyInvitation>();
+        for (SurveyInvitation inv : surveyInvitation) {
+            invitationMap.put('' + inv.Participant_Enrollment__c + inv.Trial_Survey__c, inv);
+        }
+        return invitationMap;
+    }
+
     public override Type getType() {
         return Batch_PSECreateInvitation.class;
     }
-
 }
